src/objects/WithdrawalToBanner__c.object
<CustomObject>
    <description>Control object for pushing student drops to Oracle/Banner</description>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents processing in Banner multiple times, which would create duplicate SFRWDRL rows</description>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PushResult__c</fullName>
        <description>Result of the record being pushed to Banner</description>
        <label>Push Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RefId__c</fullName>
        <externalId>true</externalId>
        <label>Ref Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentPIDM__c</fullName>
        <label>Student PIDM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Process</label>
        <referenceTo>StudentProcess__c</referenceTo>
        <relationshipLabel>Withdrawals To Banner</relationshipLabel>
        <relationshipName>WithdrawalsToBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WithdrawalTableKey__c</fullName>
        <description>Table key from WGUBANNER.TBL_WGU_DROP_LIST</description>
        <label>Withdrawal Table Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Withdrawal To Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActionNeeded__c</columns>
        <columns>RefId__c</columns>
        <columns>StudentProcess__c</columns>
        <columns>StudentPIDM__c</columns>
        <columns>WithdrawalTableKey__c</columns>
        <columns>Processed__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>W2B-{0000000}</displayFormat>
        <label>Withdraw To Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Withdrawals To Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>